src/objects/Employment_Website__c.object
<CustomObject>
    <fields>
        <fullName>Maximum_Budget__c</fullName>
        <label>Maximum Budget</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_Per_Post__c</fullName>
        <label>Price Per Post</label>
        <precision>7</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Web_Address__c</fullName>
        <label>Web Address</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <label>Employment Website</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Employment Website Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employment Websites</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>